src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Temporary_COO_Expected_Issue_Date__c</fullName>
        <description>Date the Temporary COO is expected to be issued.</description>
        <inlineHelpText>Date the Temporary COO is expected to be issued.</inlineHelpText>
        <label>Temporary COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_SROs_in_Building__c</fullName>
        <description>The Total Number of SROs in the Building.</description>
        <inlineHelpText>The Total Number of SROs in the Building.</inlineHelpText>
        <label>Total Number of SROs in Building</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Studios_in_Building__c</fullName>
        <description>The total number of studios in the building.</description>
        <inlineHelpText>The total number of studios in the building.</inlineHelpText>
        <label>Total Number of Studios in Building</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_in_the_Bldg_including_BMR__c</fullName>
        <description>The total number of units in the building including BMR units.</description>
        <inlineHelpText>The total number of units in the building including BMR units.</inlineHelpText>
        <label>Total # Units in the Bldg- including BMR</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_1_Bedrooms__c</fullName>
        <description>Total Number of 1 Bedrooms in the Building.</description>
        <inlineHelpText>Total Number of 1 Bedrooms in the Building.</inlineHelpText>
        <label>Total # of 1 Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_1plus_Bedrooms__c</fullName>
        <description>Total Number of 1plus Bedroom Units in the building.</description>
        <inlineHelpText>Total Number of 1plus Bedroom Units in the building.</inlineHelpText>
        <label>Total # of 1+ Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_2_Bedrooms__c</fullName>
        <description>Total Number of 2 Bedrooms in the Building.</description>
        <inlineHelpText>Total Number of 2 Bedrooms in the Building.</inlineHelpText>
        <label>Total # of 2 Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_2plus_Bedrooms__c</fullName>
        <description>Total Number of 2plus Bedrooms in the Building.</description>
        <inlineHelpText>Total Number of 2plus Bedrooms in the Building.</inlineHelpText>
        <label>Total # of 2+ Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_3_Bedrooms__c</fullName>
        <description>Total Number of 3 Bedrooms in the Building.</description>
        <inlineHelpText>Total Number of 3 Bedrooms in the Building.</inlineHelpText>
        <label>Total # of 3 Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_3plus_Bedrooms__c</fullName>
        <description>The total number of 3plus Bedrooms in the Building.</description>
        <inlineHelpText>The total number of 3plus Bedrooms in the Building.</inlineHelpText>
        <label>Total # of 3+ Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Jr_1_Bedrooms__c</fullName>
        <description>Total Number of Jr 1 Bedrooms in the Building.</description>
        <inlineHelpText>Total Number of Jr 1 Bedrooms in the Building.</inlineHelpText>
        <label>Total # of Jr. 1 Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Other_Bedrooms__c</fullName>
        <description>Total Number of Other Bedroom Units in the Building.</description>
        <inlineHelpText>Total Number of Other Bedroom Units in the Building.</inlineHelpText>
        <label>Total # of Other Bedrooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Washer_dryer_hook_ups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Washer/dryer hook-ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wheelchair_accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheelchair accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Fireplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Fireplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_BR_Maximum_Rent__c</fullName>
        <description>1 BR Maximum Rent</description>
        <inlineHelpText>1 BR Maximum Rent</inlineHelpText>
        <label>1 BR Maximum Rent</label>
        <summarizedField>Unit__c.BMR_Rent_Monthly__c</summarizedField>
        <summaryFilterItems>
            <field>Unit__c.Number_of_Bedrooms__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit__c.Property__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1_BR_Min__c</fullName>
        <description>Minimum Unit Price for 1 BR</description>
        <inlineHelpText>Minimum Unit Price for 1 BR</inlineHelpText>
        <label>1 BR Min</label>
        <summarizedField>Unit__c.BMR_Rent_Monthly__c</summarizedField>
        <summaryFilterItems>
            <field>Unit__c.Number_of_Bedrooms__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit__c.Property__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasWaitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine if this building is also keeping applications on a waitlist</description>
        <inlineHelpText>Does this building have a waitlist?</inlineHelpText>
        <label>Has waitlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Residential_Floors_in_the_Building__c</fullName>
        <description>The number of residential floors in the building.</description>
        <inlineHelpText>The number of residential floors in the building.</inlineHelpText>
        <label># of Residential Floors in the Building</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Name__c</columns>
        <columns>Development__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Property_Record_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Buildings</fullName>
        <columns>NAME</columns>
        <columns>Property_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Buildings</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Property Auto-Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>